[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["Levkov Gleb <Glebchanskiy@yandex.by>"]
readme = "README.md"
packages = [{include = "lab1"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"
sqlalchemy = "^2.0.2"
tabulate = "^0.9.0"
poetry-dotenv-plugin = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
atm-client = "lab1.main:main"